# carla_agent

./: .gitignore  LICENSE  README.md  chat_agent.py  create_db.py  pyproject.toml
agent_misc/: agent_functool.py  constant.py  utils.py
doc_database/: __init__.py  chat_with_db.py  document_manager.py  embedding.py
manager/: __init__.py  carla_manager.py  world_manager.py
script/: download_doc.sh
tools/: __init__.py  render.py  route_planner.py
