[project]
name = "ttsg-pp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
    "carla==0.9.15",
    "chromadb==0.6.3",
    "langchain-chroma==0.2.2",
    "langchain-community==0.3.19",
    "langchain-core==0.3.45",
    "langchain-google-genai==2.1.0",
    "langchain-openai==0.3.8",
    "langchain-text-splitters==0.3.6",
    "langchain[openai]==0.3.20",
    "langgraph==0.3.10",
    "markdown==3.7",
    "mistletoe>=1.4.0",
    "python-dotenv==1.0.1",
    "tyro==0.9.17",
    "unstructured==0.17.0",
    "html2text>=2024.2.26",
    "openai-agents==0.0.4",
    "pygame==2.6.1",
    "opencv-python==4.11.0.86",
    "scikit-image>=0.25.2",
]

[dependency-groups]
dev = [
    "ruff>=0.10.0",
]

[tool.ruff]
exclude = [
    ".venv",
    "data",
    ".vscode",
    ".ipynb_checkpoints",
    "v2vbench",
]
line-length = 110
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["E501"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
